# calendula-os

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_PLAN.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml  release.yml
.scratch/optimization-roadmap/: PRD.md
.scratch/optimization-roadmap/issues/: 01-display-render-path.md  02-book-pipeline.md  03-power-boot.md  04-storage-wifi-throughput.md  05-flash-ram-budget.md  06-web-emulator-ci.md
.scratch/sleep-screen-artifacts/issues/: 01-investigate-sleep-screen-artifacts.md
app-core/: Cargo.toml
app-core/src/: lib.rs  storage_loop.rs
display/: Cargo.toml
display/src/: board.rs  custom_generated.rs  epd.rs  fb.rs  font.rs  lib.rs  literata_extra_generated.rs  literata_generated.rs  literata_semibold_generated.rs  render.rs
display/src/board/: x3.rs  x4.rs
display/src/epd/: mod.rs  ssd1677.rs  uc8253.rs  x3.rs  x4.rs
docs/: ARCHITECTURE.md  CONTEXT.md  CUSTOM_FONTS.md  FLASHING.md  IMPLEMENTATION_PLAN.md
docs/agents/: bench.md  visual-verification.md
docs/brainstorms/: 2026-06-11-ui-design-language-brainstorm.md  2026-07-07-stack-headroom-options.md
docs/plans/: 2026-07-06-x3-support-plan.md  2026-07-07-esp-hal-1x-stable-migration.md  2026-07-07-marigoldos-pages-prd.md  2026-07-07-portrait-orientation-prd.md  2026-07-09-portrait-mode.md
fixtures/scenarios/: chapters-select.toml  files-before-scan.toml  home.toml  landscape-home.toml  landscape-library-scroll.toml  landscape-library.toml  landscape-settings.toml  landscape-sleep.toml  orientation-portrait-home.toml  orientation-portrait-reading-sheet.toml  portrait-home.toml  portrait-library-scroll.toml  portrait-library.toml  portrait-reading-sheet.toml  portrait-settings.toml  portrait-sleep.toml  read-next.toml  sd-library-select.toml  settings-cycle.toml  sleep-wake.toml  sleep.toml  sync-error-retry.toml  sync-flow.toml  sync-portal-qr.toml  sync-portal-setup.toml  sync-serving.toml  wireless-forget.toml
fw/: Cargo.toml  build.rs  rodata.x
fw/src/: board.rs  custom_font.rs  display_flush.rs  library_sd.rs  main.rs  ota_update.rs  reader_cache.rs  reader_cache_files.rs  reader_layout.rs  reader_store.rs  sd_session.rs  sleep_marker.rs  sync_mem.rs  upload.rs  views.rs
fw/src/board/: x3.rs  x4.rs
fw/src/display_flush/: mod.rs  ssd1677.rs  uc8253.rs  x3.rs  x4.rs
fw/src/tasks/: app.rs  display.rs  input.rs  mod.rs  power.rs  wifi.rs
hal-ext/: Cargo.toml
hal-ext/src/: bq27220.rs  lib.rs  nvm.rs  rtc.rs  spi_dma.rs
proto/: Cargo.toml
proto/src/: cache.rs  captive.rs  catalog.rs  durable.rs  epub.rs  kosync.rs  lib.rs  nvm.rs  ota.rs  storage.rs  text.rs  upload.rs  wifi_sync.rs
tools/: build-release.sh  build-web.sh  check.sh  fontgen_common.py  generate_literata.py  generate_literata_extra.py  generate_literata_semibold.py  generate_literata_sizes.py  generate_merriweather.py  generate_mockup_fonts.py  generate_qr.py  install-hooks.sh  verify_web_flasher.sh
tools/bench/: README.md  bench.py  test_bench.py
tools/emulator/: Cargo.toml
tools/emulator/src/: main.rs  panel.rs  panel_common.rs  panel_uc8253.rs  panel_x3.rs  render.rs  scenario.rs
tools/emulator/tests/: reading_golden.rs
tools/preview/: Cargo.toml
tools/preview/src/: design_mockups.rs  main.rs  mockup_fonts_generated.rs
tools/web-emulator/: Cargo.toml
tools/web-emulator/books/: aesop.txt  alice.txt  carol.txt  convert.py  fables.txt  lastmen.txt  mars.txt  pegana.txt  timemachine.txt  tour.txt  verse.txt  warworlds.txt
tools/web-emulator/src/: books.rs  lib.rs
ui/: Cargo.toml
ui/src/: app_render.rs  custom_font.rs  font.rs  icons.rs  join_qr.rs  layout.rs  lib.rs  qr_generated.rs  reading.rs  render.rs
ui/src/qr_generated/: x3.rs  x4.rs
upload-store/: Cargo.toml
upload-store/src/: lib.rs
upload-store/tests/: transaction.rs
web/: index.html  manifest-x3.json  manifest-x4.json  release-assets.json
