[workspace]
members = [
    "app-core",
    "display",
    "ui",
    "proto",
    "hal-ext",
    "fw",
    "upload-store",
]
resolver = "2"

[profile.release]
opt-level = "s"          # Size over speed
lto = "fat"
codegen-units = 1
panic = "abort"

# Hot data-path crates get speed; fw and HAL glue stay size-optimized.
# Stack impact re-measured with -Zemit-stack-sizes when this changed:
# the EPUB open chain must stay inside the 30-43 KB region.
[profile.release.package.proto]
opt-level = 3

[profile.release.package.display]
opt-level = 3

# The radio driver's timing-sensitive code wants speed (its build script
# warns below opt-level 2); the rest of the sync session is network-bound.
[profile.release.package.esp-radio]
opt-level = 3
