[workspace]
members = [
    "app-core",
    "display",
    "ui",
    "proto",
    "hal-ext",
    "fw",
    "upload-store",
]
resolver = "2"

# Members opt in with `[lints] workspace = true`; Cargo does not apply this
# table implicitly. The tools/ crates are separate workspaces and stay outside
# it. `unsafe_code` levels stay as crate attributes because they differ per
# crate: libraries forbid it, fw denies it with narrow per-item allows.
[workspace.lints.rust]
# Edition 2021 allows unsafe operations bare inside `unsafe fn`; require an
# inner `unsafe {}` so each operation's obligations stay visible.
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# Every unsafe block carries a `// SAFETY:` comment stating its soundness
# argument.
undocumented_unsafe_blocks = "deny"

[profile.release]
opt-level = "s"          # Size over speed
lto = "fat"
codegen-units = 1
panic = "abort"

# Hot data-path crates get speed; fw and HAL glue stay size-optimized.
# Stack impact re-measured with -Zemit-stack-sizes when this changed:
# the EPUB open chain must stay inside the 30-43 KB region.
[profile.release.package.proto]
opt-level = 3

[profile.release.package.display]
opt-level = 3

# The radio driver's timing-sensitive code wants speed (its build script
# warns below opt-level 2); the rest of the sync session is network-bound.
[profile.release.package.esp-radio]
opt-level = 3
