[package]
name = "fw"
version = "0.1.0"
edition = "2021"
default-run = "fw"

[features]
default = ["board-x4"]
# One board feature must be enabled; it selects fw::board's active module and
# is forwarded to the display/ui crates so the whole stack agrees on a board.
board-x4 = ["display/board-x4", "ui/board-x4"]
# Temporary on-device validation of the flash + otadata path without an SD card:
# on first boot, copy the running image into the inactive slot and switch
# otadata to it. Never enabled in a release build. See fw::ota_update.
ota-selftest = []

[dependencies]
app-core = { path = "../app-core" }
display = { path = "../display" }
ui = { path = "../ui" }
proto = { path = "../proto" }
hal-ext = { path = "../hal-ext" }

embassy-executor  = { version = "0.7.0", features = ["nightly"] }
embassy-time      = "0.4.0"
embassy-sync      = "0.6.0"
embassy-futures   = "0.1.1"
esp-hal           = { version = "0.23.1", features = ["esp32c3"] }
esp-hal-embassy   = { version = "0.6.0", features = ["esp32c3", "executors"] }
embedded-hal-async = "1.0.0"
embedded-hal       = "1.0.0"
# Pinned to unreleased develop for empty-directory deletion (PR #210, merged
# 2025-12-22, not in any crates.io release as of 0.9.0). Swap back to a plain
# version once 0.10 ships. Pinned to the #210 merge itself, NOT develop HEAD:
# the later SD driver rewrites (#222/#226/#248/#249) fail cold card init on
# the X4 ("sd: session failed: CardInit", July 4 2026).
embedded-sdmmc     = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", rev = "d26892f7405469eba95741763ab39bda2239d5ec", default-features = false }
nb                = "1.1.0"
portable-atomic   = { version = "1.10.0", features = ["unsafe-assume-single-core"] }
static_cell       = "2.1.0"
heapless          = "0.8.0"
esp-println       = { version = "0.13.0", features = ["esp32c3"] }
esp-wifi          = { version = "0.12.0", features = ["esp32c3", "wifi"] }
esp-alloc         = "0.6.0"
embassy-net       = { version = "0.6.0", features = ["proto-ipv4", "tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
# Prints registers + backtrace over USB on CPU exceptions, then halts in
# place instead of silently resetting. Keep: crash evidence beats reboots.
esp-backtrace     = { version = "0.15.0", features = ["esp32c3", "println", "exception-handler"] }
esp-storage = { version = "0.3.1", features = ["esp32c3", "nor-flash"] }
embedded-storage = "0.3.1"
