[package]
name = "fw"
version = "0.4.0"
edition = "2021"
default-run = "fw"

[features]
# Temporary on-device validation of the flash + otadata path without an SD card:
# on first boot, copy the running image into the inactive slot and switch
# otadata to it. Never enabled in a release build. See fw::ota_update.
ota-selftest = []
# Build for the Xteink X3 (792x528 UC8253 panel, BQ27220 battery gauge).
# Off = Xteink X4, the default. See docs/plans/2026-07-06-x3-support-plan.md.
device-x3 = ["display/device-x3"]
# Compile a generated custom typeface into firmware. Requires
# display/src/custom_generated.rs, produced by tools/font_pack_to_rust.py.
builtin-custom-font = ["display/builtin-custom-font"]

[dependencies]
app-core = { path = "../app-core" }
display = { path = "../display" }
ui = { path = "../ui" }
proto = { path = "../proto" }
hal-ext = { path = "../hal-ext" }
upload-store = { path = "../upload-store" }

embassy-executor  = "0.10.0"
embassy-time      = "0.5.1"
embassy-sync      = "0.8.0"
embassy-futures   = "0.1.1"
esp-hal           = { version = "1.1.1", features = ["esp32c3", "unstable"] }
esp-rtos          = { version = "0.3.0", features = ["esp32c3", "embassy", "esp-radio", "esp-alloc"] }
embedded-hal-async = "1.0.0"
embedded-hal       = "1.0.0"
# Pinned to unreleased develop for empty-directory deletion (PR #210, merged
# 2025-12-22, not in any crates.io release as of 0.9.0). Swap back to a plain
# version once 0.10 ships. Pinned to the #210 merge itself, NOT develop HEAD:
# the later SD driver rewrites (#222/#226/#248/#249) fail cold card init on
# the X4 ("sd: session failed: CardInit", July 4 2026).
embedded-sdmmc     = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git", rev = "d26892f7405469eba95741763ab39bda2239d5ec", default-features = false }
nb                = "1.1.0"
portable-atomic   = { version = "1.10.0", features = ["unsafe-assume-single-core"] }
static_cell       = "2.1.0"
heapless          = "0.9.0"
esp-println       = { version = "0.17.0", features = ["esp32c3"] }
esp-radio         = { version = "1.0.0-beta.0", features = ["esp32c3", "wifi", "unstable"] }
esp-alloc         = "0.10.0"
embassy-net       = { version = "0.9.1", features = ["proto-ipv4", "tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }
# Prints registers + backtrace over USB on CPU exceptions, then halts in
# place instead of silently resetting. Keep: crash evidence beats reboots.
esp-backtrace     = { version = "0.19.0", features = ["esp32c3", "println", "panic-handler"] }
esp-storage = { version = "0.9.0", features = ["esp32c3"] }
embedded-storage = "0.3.1"
