[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
miniz_oxide = { version = "0.9.1", default-features = false }
# SHA-256 for OTA image validation (no_std, no heap). asm is off so it builds
# for both the riscv32 target and host tests.
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
# Tests deflate their own fixtures; firmware builds never see this feature.
miniz_oxide = { version = "0.9.1", default-features = false, features = ["with-alloc"] }
