[package]
name = "x4-emulator"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[features]
default = ["board-x4"]
gui = ["dep:eframe", "dep:egui"]
# Exactly one board feature selects the emulated panel and geometry; it is
# forwarded to the app-core/display/ui crates. `board-x4`/`board-x3` are
# mutually exclusive (build X3 with `--no-default-features --features board-x3`).
board-x4 = ["app-core/board-x4", "display/board-x4", "ui/board-x4"]
board-x3 = ["app-core/board-x3", "display/board-x3", "ui/board-x3"]

[dependencies]
app-core = { path = "../../app-core", default-features = false }
display = { path = "../../display", default-features = false }
ui = { path = "../../ui", default-features = false }
eframe = { version = "0.28", default-features = false, features = ["glow", "default_fonts"], optional = true }
egui = { version = "0.28", optional = true }
png = "0.17"
proto = { path = "../../proto" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
