[package]
name = "x4-emulator"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[features]
default = []
gui = ["dep:eframe", "dep:egui"]
# Render at Xteink X3 geometry (792x528). Additive across the workspace:
# flipping the single display crate switches WIDTH/HEIGHT for ui too.
device-x3 = ["display/device-x3", "ui/device-x3"]

[dependencies]
app-core = { path = "../../app-core" }
display = { path = "../../display" }
ui = { path = "../../ui" }
eframe = { version = "0.28", default-features = false, features = ["glow", "default_fonts"], optional = true }
egui = { version = "0.28", optional = true }
png = "0.17"
proto = { path = "../../proto" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
