[package]
name = "x4-preview"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[features]
default = []
# Render at Xteink X3 geometry (792x528). Additive across the workspace:
# flipping the single display crate switches WIDTH/HEIGHT for ui too.
device-x3 = ["display/device-x3"]

[dependencies]
display = { path = "../../display" }
proto = { path = "../../proto" }
ui = { path = "../../ui" }
png = "0.17"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
