[package]
name = "x4-web-emulator"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Render at Xteink X3 geometry (792x528). Additive across the workspace:
# flipping the single display crate switches WIDTH/HEIGHT for ui too.
device-x3 = ["display/device-x3"]

[dependencies]
app-core = { path = "../../app-core" }
display = { path = "../../display" }
proto = { path = "../../proto" }
ui = { path = "../../ui" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
